--- a/src/Components/Pages/style.scss
+++ b/src/Components/Pages/style.scss
@@ -1,5 +1,5 @@
 .mens-section img{
-    width: 100%;
+    max-width: 100%;
     margin-top: 7%;
 }
 
@@ -14,7 +14,7 @@
     align-items: center;
     overflow: hidden;
     justify-content: space-between;
-    margin-left: 0 20px;
+    margin-left: 0 2rem;
     padding-left:  3%;
   
   }
@@ -33,26 +33,26 @@
   
   .ribbon-1 {
     background-color: rgb(93, 93, 93);
-    width: 100px;
-    height: 35px;
+    width: 10rem;
+    height: 3.5rem;
     color: white;
-    font-size: 12px;
-    margin-bottom: 5px;
-    margin-left: 10px;
-    padding: 7px 6px;
+    font-size: 1.2rem;
+    margin-bottom: .5rem;
+    margin-left: 1rem;
+    padding: .7rem .6rem;
     text-align: center;
   
   }
   
   .ribbon-2 {
     background-color: rgb(61, 154, 146);
-    width: 100px;
-    height: 35px;
+    max-width: 10rem;
+    max-height: 3.5rem;
     color: white;
-    font-size: 12px;
-    margin-bottom: 5px;
-    margin-left: 10px;
-    padding: 7px 6px;
+    font-size: 1.2rem;
+    margin-bottom: .5rem;
+    margin-left: 1rem;
+    padding: .7rem .6rem;
   
   
   }
@@ -62,16 +62,16 @@
     background-color: black;
     color: white;
     border: none;
-    width: 100%;
-    height: 50px;
+    max-width: 100%;
+    max-height: 5rem;
   }
   
   a {
     color: white;
     text-decoration: none;
     text-align: center; 
-    font-size: 16px;
-    padding-top: 10px;
+    font-size: 1.6rem;
+    padding-top: 1rem;
   
     &:hover {
       font-weight: 200;
@@ -80,7 +80,7 @@
   }
   
   .modal-conatiner {
-    max-width: 1140px;
+    max-width: 114rem;
     width: 100%;
   }
   
@@ -90,18 +90,18 @@
     color: white;
     border: none;
     width: 90%;
-    height: 50px;
+    height: 5rem;
   }
   
   .banner-gif img {
     margin-top: 5%;
-    width: 100%;
-    height: 450px;
+    max-width: 100%;
+    max-height: 45rem;
   }
   
   .pro-img {
-    height: 260px;
-    border-radius: 5px;
+    height: 26rem;
+    border-radius: .5rem;
   }
   
   .box {
@@ -113,16 +113,16 @@
   }
 
   .icon-compare {
-    width: 20px;
-    height: 20px;
+    max-width: 2rem;
+    max-height: 2rem;
     margin-top: 0 !important;
   }
 
   .customh6 {
-    font-size: 14px;
+    font-size: 1.4rem;
     margin-left: 3%;
     font-weight: 200;
-    margin-top: 20px;
+    margin-top: 2rem;
 
     span {
       font-weight: 700;
@@ -131,13 +131,13 @@
 
 .btn-compare {
   width: 15%;
-  height: 50px;
+  height: 5rem;
   background-color: white;
   display: flex;
-  border: 0.5px solid black;
+  border: .1rem solid black;
   margin-left: 3%;
-  margin-top: 25px; 
-  padding: 15px 40px;
+  margin-top: 2.5rem; 
+  padding: 1.5rem 4rem;
 
 
   h6 {
@@ -148,14 +148,14 @@
 
 
 .mens-list {
-  margin-top: -130px;
+  margin-top: -13rem;
 }
 
 
 .menu-links a {
   color: black;
-  padding-left: 60px;
-  font-size: 22px; 
+  padding-left: 6rem;
+  font-size: 2.2rem; 
 
   &:focus {
     font-weight: bold;
@@ -166,7 +166,7 @@
     position: absolute;
     width: 100%;
     transform: scaleX(0);
-    height: 1px;
+    height: .1rem;
     bottom: 0;
     left: 0;
     background-color: rgb(5, 173, 150);
@@ -185,7 +185,7 @@
 }
 
 .form-group {
-  margin-top: 16px;
+  margin-top: 1.6rem;
   width: 95%;
   flex-direction: column;
 }
@@ -193,16 +193,20 @@
 .btn-submit {
   background-color: black;
   color: white;
-  height: 50px;
+  height: 5rem;
   border: none;
+  max-width: 100%;
+  width: 100%;
+  font-size: 1.4rem;
 }
 
 .form-control {
   margin: 0;
+  font-size: 1.4rem;
 }
 
 .book-para h1 {
-  font-size: '22px' !important;
+  font-size: '2.2rem' !important;
   text-align: center;
   font-family: 'Playfair Display';
   font-weight: bold;
@@ -210,20 +214,20 @@
 }
 
 .book-para p{
-  padding: 0 90px;
+  padding: 0 9rem;
   line-height: 1.3;
-  font-size: 14px;
+  font-size: 1.4rem;
   text-align: center;
   color: black;
   margin-top: 0;
 }
 
 .book-section {
-  padding: 20px 30px;
+  padding: 2rem 3rem;
 }
 
 .book-section img {
-  height: 550px;
+  height: 55rem;
 }
 
 .women-section img{
