--- a/src/Components/Pages/Cart.scss
+++ b/src/Components/Pages/Cart.scss
@@ -29,7 +29,11 @@
   border-bottom: 1px solid black;
   font-size: 1.3rem;
   background-color: white;
-  letter-spacing: 0.2rem;
+  letter-spacing: 0.2rem; 
+
+   &:hover {
+    font-weight: bold;
+   }
 }
 
 .home-btn {
@@ -58,8 +62,7 @@
 }
 
 
-.pay , .amount,
-.taxes {
+.pay , .amount {
   font-size: 1.7rem;
   font-weight: bold;
 }
@@ -118,14 +121,17 @@
   display: flex;
   a {
   color: gray;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   border-bottom: .1rem solid gray;
   letter-spacing: .1rem;
+  padding: 1rem;
+  padding-right: 1.2rem;
   
    &:focus, .active {
       color: black;
       border: .1rem solid gray;
       border-bottom: 0;
+      font-weight: bold;
    }
 }
 }
@@ -140,6 +146,7 @@
     padding: 1.3rem 0;
     font-size: 1.6rem;
     font-family: 'Roboto';
+    width: 28rem;
      
     &:focus {
       border: .1rem solid black;
@@ -156,6 +163,7 @@
     font-size: 1.6rem;
     letter-spacing: 0.1rem;
     padding: 1.3rem;
+    width: 9rem;
 
 
      &:hover {
@@ -187,4 +195,117 @@
   font-family: 'Playfair Display, sans-serif';
   font-weight: bold;
   font-size: 1.4rem;
+}
+
+
+.order-summary h1 {
+  font-weight: 600;
+  font-size: 3.2rem;
+}
+
+.cart-items-h1 {
+    font-weight: bold;
+    font-size: 4rem;
+}
+
+.sub-total {
+  margin-right: 0;
+  margin-top: 12%;
+}
+
+.taxes p {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-top: 0% !important;
+}
+
+.cart-checkout button {
+  width: 80%;
+}
+
+.continue-shop {
+  margin-left: 20%;
+}
+
+.price-section {
+  margin-top: 8%;
+  line-height: 3rem;
+}
+
+@media (max-width: 767px) {
+  .sub-total {
+    position: relative;
+  }
+}
+
+.shipping-method {
+  padding-top: 0;
+
+  .home-delivery {
+    background-color: #000;
+    color: #fff;
+  }
+
+p {
+  color: black;
+  font-size: 1.7rem;
+  font-weight: bold;
+}
+  button {
+    width: 42%;
+    height: 5rem;
+    border: .1rem solid black;
+    background-color: #fff;
+    
+  }
+ 
+}
+
+.select-country p, 
+.pin-code p {
+  color: #939393;
+  font-size: 1.6rem;
+  font-weight: 700;
+
+}
+
+   
+.form-country {
+  border: none;
+  width: 50%;
+  height: 5rem;
+  background-color: #f6f6f6;
+  font-size: 1.4rem;
+}
+
+.pin-code button {
+  background-color: #fff;
+    border: 1px solid #000;
+    color: #000;
+    min-height: 4rem;
+    font-size: 1.6rem;
+    letter-spacing: 0.1rem;
+    padding: 1.3rem;
+    width: 9rem;
+
+
+     &:hover {
+      background-color: #000;
+      color: #fff;
+     }
+
+}
+.pin-code input {
+  background-color: #f6f6f6;
+    border: 1px solid #f6f6f6;
+    padding: 1.3rem 0;
+    font-size: 1.6rem;
+    font-family: 'Roboto';
+    width: 21rem;
+     
+    &:focus {
+      border: .1rem solid black;
+      border-radius: 0
+    }
+
 }
