--- a/src/Components/Pages/Login/Login.scss
+++ b/src/Components/Pages/Login/Login.scss
@@ -85,8 +85,12 @@ p {
     }
 }
 
+.login-section label {
+    font-size: 1.6rem;
+}
 
-@media (max-width: 700px){
+
+@media (max-width: 400px){
     .box-wrapper {
         flex-direction: column;
     }
